--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <input type="text" id="number" name="number"><br>
             <label for="comments">Leave your comments:</label><br>
             <textarea name="Comments" id="comments" cols="50" rows="4"></textarea><br>
-            <label for="coffee">How many cups of coffee have you had?</label>
-            <input list="coffee" name="coffee">
+            <label for="what">How many cups of coffee have you had?</label>
+            <input list="coffee" name="coffee" id="what">
             <datalist id="coffee">
                 <option value="-1?">-1?</option>
                 <option value="0">0</option>
